crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__comments__line_at_eof.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/comments/line_at_eof.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print "ok"))

----- stderr -----
