crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__comments__only_line_comment.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/comments/only_line_comment.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program)

----- stderr -----
