crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__comments__unicode.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/comments/unicode.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print "ok"))

----- stderr -----
